fixed the star rating not showing up

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ header > nav > ul > li > a {
 main {
     margin: 0px auto;
     width: 960px;
-    height: 800px;
+    height: 1500px;
     background-color: rgb(105, 105, 103);
 
 }
